--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>QTrip Static</title>
         <link href="./css/styles.css" rel="stylesheet"/>
+
+        <!-- TODO: MODULE_LAYOUT -->
+        <!-- 1. Create a <link> to the first stylesheet needed for Bootstrap -->
     </head>
     <body>
-        <h1>QTrip Static</h1>
+        <!-- TODO: MODULE_LAYOUT -->
+        <!-- 1. Use appropriate css classes on nav element. -->
+        <!-- 2. Add child elements as required. -->
+        <nav></nav> 
+
+        <!-- TODO: MODULE_LAYOUT -->
+        <!-- 1. Use appropriate css classes on the hero image container element. -->
+        <!-- 2. Add child elements as required. -->
+
+        <div class="hero-image d-flex"></div> 
+
+        <div class="container">
+            <!-- TODO: MODULE_LAYOUT -->
+            <!-- 1. Create the grid like layout as required. -->
+
+        </div>
+
+        <footer>
+            <div class="container">© QTrip 2020</div>
+        </footer>
+        
+          <!-- TODO: MODULE_LAYOUT -->
+          <!-- Add scripts needed for bootstrap to work -->
+
     </body>
 </html>
