--- a/index.html
+++ b/index.html
@@ -8,23 +8,68 @@
 
         <!-- TODO: MODULE_LAYOUT -->
         <!-- 1. Create a <link> to the first stylesheet needed for Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <body>
         <!-- TODO: MODULE_LAYOUT -->
         <!-- 1. Use appropriate css classes on nav element. -->
         <!-- 2. Add child elements as required. -->
-        <nav></nav> 
+        <nav class="navbar navbar-expand-sm bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">QTrip</a>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navItems">
+                    <span class="navbar-toggler-icon"/>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navItems">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/adventures/index.html">Explore</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav> 
 
         <!-- TODO: MODULE_LAYOUT -->
         <!-- 1. Use appropriate css classes on the hero image container element. -->
         <!-- 2. Add child elements as required. -->
 
-        <div class="hero-image d-flex"></div> 
+        <div class="hero-image d-flex flex-column align-items-center text-light justify-content-center">
+            <h1>Welcome to QTrip</h1>
+            <p class="hero-subheading text-center">Explore the world with fantastic places to venture around</p>
+            <input type="text" class="hero-input" placeholder="Search a City"/>
+        </div> 
 
         <div class="container">
             <!-- TODO: MODULE_LAYOUT -->
             <!-- 1. Create the grid like layout as required. -->
+            <div class="row mt-4">
+                <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                    <a href="./pages/adventures/index.html">Bengaluru</a>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                    <a href="#">Kolkata</a>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                    <a href="#">Goa</a>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                    <a href="#">Mumbai</a>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                    <a href="#">Singapore</a>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                    <a href="#">Dubai</a>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                    <a href="#">Malaysia</a>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                    <a href="#">Paris</a>
+                </div>
 
+
+            </div>
         </div>
 
         <footer>
@@ -33,6 +78,6 @@
         
           <!-- TODO: MODULE_LAYOUT -->
           <!-- Add scripts needed for bootstrap to work -->
-
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
