--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <!-- 1. Use appropriate css classes on the hero image container element. -->
         <!-- 2. Add child elements as required. -->
 
-        <div class="hero-image d-flex flex-column align-items-center text-light justify-content-center">
+        <div class="hero-image d-flex flex-column align-items-center text-light justify-content-center text-center">
             <h1>Welcome to QTrip</h1>
-            <p class="hero-subheading text-center">Explore the world with fantastic places to venture around</p>
+            <p class="hero-subheading">Explore the world with fantastic places to venture around</p>
             <input type="text" class="hero-input" placeholder="Search a City"/>
         </div> 
 
