completed landing page

--- a/index.html
+++ b/index.html
@@ -44,28 +44,92 @@
             <!-- 1. Create the grid like layout as required. -->
             <div class="row mt-4">
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="./pages/adventures/index.html">Bengaluru</a>
+                    <a href="./pages/adventures/index.html">
+                        <div class="tile rounded">
+                            <img src="./assets/bengaluru.jpg" class="rounded img-fluid"/>
+                            <div class="tile-text d-flex flex-column w-100 align-items-center text-white">
+                                <p class="fw-bolder mb-0">Bengaluru</p>
+                                <p>100+ places</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">Kolkata</a>
+                    <a href="#">
+                        <div class="tile rounded">
+                            <img class="img-fluid rounded" src="./assets/kolkata.jpg"/>
+                            <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
+                                <p class="mb-0 fw-bolder">Kolkatta</p>
+                                <p>52+ Places</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">Goa</a>
+                    <a href="#">
+                        <div class="tile rounded">
+                            <img class="img-fluid rounded" src="./assets/goa.jpg"/>
+                            <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
+                                <p class="mb-0 fw-bolder">Goa</p>
+                                <p>160+ Places</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">Mumbai</a>
+                    <a href="#">
+                        <div class="tile rounded">
+                            <img class="img-fluid rounded" src="./assets/mumbai.jpg"/>
+                            <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
+                                <p class="mb-0 fw-bolder">Mumbai</p>
+                                <p>121+ Places</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">Singapore</a>
+                    <a href="#">
+                        <div class="tile rounded">
+                            <img class="img-fluid rounded" src="./assets/singapore.jpg"/>
+                            <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
+                                <p class="mb-0 fw-bolder">Singapore</p>
+                                <p>89+ Places</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">Dubai</a>
+                    <a href="#">
+                        <div class="tile rounded">
+                            <img class="img-fluid rounded" src="./assets/dubai.jpg"/>
+                            <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
+                                <p class="mb-0 fw-bolder">Dubai</p>
+                                <p>74+ Places</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">Malaysia</a>
+                    <a href="#">
+                        <div class="tile rounded">
+                            <img class="img-fluid rounded" src="./assets/malaysia.jpg"/>
+                            <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
+                                <p class="mb-0 fw-bolder">Malaysia</p>
+                                <p>172+ Places</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">Paris</a>
+                    <a href="#">
+                        <div class="tile rounded">
+                            <img class="img-fluid rounded" src="./assets/paris.jpg"/>
+                            <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
+                                <p class="mb-0 fw-bolder">Paris</p>
+                                <p>150+ Places</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
 
 
