--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <!-- 2. Add child elements as required. -->
         <nav class="navbar navbar-expand-sm bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">QTrip</a>
+                <a class="navbar-brand" href="./index.html">QTrip</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navItems">
                     <span class="navbar-toggler-icon"/>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navItems">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="./pages/adventures/index.html">Explore</a></li>
                     </ul>
                 </div>
@@ -55,7 +55,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">
+                    <a href="./pages/adventures/index.html">
                         <div class="tile rounded">
                             <img class="img-fluid rounded" src="./assets/kolkata.jpg"/>
                             <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
@@ -66,7 +66,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">
+                    <a href="./pages/adventures/index.html">
                         <div class="tile rounded">
                             <img class="img-fluid rounded" src="./assets/goa.jpg"/>
                             <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
@@ -77,7 +77,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">
+                    <a href="./pages/adventures/index.html">
                         <div class="tile rounded">
                             <img class="img-fluid rounded" src="./assets/mumbai.jpg"/>
                             <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
@@ -88,7 +88,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">
+                    <a href="./pages/adventures/index.html">
                         <div class="tile rounded">
                             <img class="img-fluid rounded" src="./assets/singapore.jpg"/>
                             <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
@@ -99,7 +99,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">
+                    <a href="./pages/adventures/index.html">
                         <div class="tile rounded">
                             <img class="img-fluid rounded" src="./assets/dubai.jpg"/>
                             <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
@@ -110,7 +110,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">
+                    <a href="./pages/adventures/index.html">
                         <div class="tile rounded">
                             <img class="img-fluid rounded" src="./assets/malaysia.jpg"/>
                             <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
@@ -121,7 +121,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                    <a href="#">
+                    <a href="./pages/adventures/index.html">
                         <div class="tile rounded">
                             <img class="img-fluid rounded" src="./assets/paris.jpg"/>
                             <div class="tile-text text-white d-flex w-100 align-items-center flex-column">
